--- a/fe/package.json
+++ b/fe/package.json
@@ -14,8 +14,10 @@
     "formik": "^2.4.5",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
+    "react-datepicker": "^5.0.0",
     "react-dom": "^18.2.0",
     "react-jwt": "^1.2.0",
     "react-router-dom": "^6.19.0",
@@ -58,6 +60,7 @@
     "@testing-library/react": "^14.1.2",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.9.4",
+    "@types/react-datepicker": "^4.19.5",
     "babel-jest": "^29.7.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
